ejemplo de button me gusta

--- a/React/VanilaJS/index.html
+++ b/React/VanilaJS/index.html
@@ -23,7 +23,8 @@
 </style>
 
 <body>
-  <button>Megusta</button>
+  <button data-id="123">Megusta</button>
 </body>
+<script src="./main.js"></script>
 
 </html>
