ejemplo de varios botones

--- a/React/VanilaJS/index.html
+++ b/React/VanilaJS/index.html
@@ -23,7 +23,9 @@
 </style>
 
 <body>
-  <button data-id="123">Megusta</button>
+  <button data-id="123">Me Gusta</button>
+  <button data-id="456">Me Gusta</button>
+  <button data-id="789">Me Gusta</button>
 </body>
 <script src="./main.js"></script>
 
