--- a/js/CartShop/index.html
+++ b/js/CartShop/index.html
@@ -31,6 +31,12 @@
         </section>
     </header>
 
+    <section id="hero">
+        <h3> Compra Todo lo que deseas </h3>
+        <p>a precios de locura</p>
+        <button>Productos</button>
+    </section>
+
     <script src="./index.js"></script>
 </body>
 
