--- a/js/CartShop/index.html
+++ b/js/CartShop/index.html
@@ -32,9 +32,9 @@
     </header>
 
     <section id="hero">
-        <h3> Compra Todo lo que deseas </h3>
-        <p>a precios de locura</p>
-        <button>Productos</button>
+            <h3> Productos a Tú Medida </h3>
+            <p> precios de locura !!!</p>
+            <button>Productos</button>
     </section>
 
     <script src="./index.js"></script>
