agregando display grid

--- a/js/CartShop/index.html
+++ b/js/CartShop/index.html
@@ -32,11 +32,61 @@
     </header>
 
     <section id="hero">
-            <h3> Productos a Tú Medida </h3>
-            <p> precios de locura !!!</p>
-            <button>Productos</button>
+        <h3> Productos a Tú Medida </h3>
+        <p> precios de locura !!!</p>
+        <button>Productos</button>
     </section>
 
+    <div class="container">
+        <div class="card">
+            <img src="img/curso1.jpg">
+            <div class="info-card">
+                <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
+                <p>Juan Pedro Basante</p>
+                <img src="img/estrellas.png">
+                <p class="precio">$200</p>
+                <button>
+                    <a href="#">Agregar Al Carrito</a>
+                </button>
+            </div>
+        </div> <!--.card-->
+        <div class="card">
+            <img src="img/curso1.jpg">
+            <div class="info-card">
+                <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
+                <p>Juan Pedro Basante</p>
+                <img src="img/estrellas.png">
+                <p class="precio">$200</p>
+                <button>
+                    <a href="#">Agregar Al Carrito</a>
+                </button>
+            </div>
+        </div> <!--.card-->
+        <div class="card">
+            <img src="img/curso1.jpg">
+            <div class="info-card">
+                <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
+                <p>Juan Pedro Basante</p>
+                <img src="img/estrellas.png">
+                <p class="precio">$200</p>
+                <button>
+                    <a href="#">Agregar Al Carrito</a>
+                </button>
+            </div>
+        </div> <!--.card-->
+        <div class="card">
+            <img src="img/curso1.jpg">
+            <div class="info-card">
+                <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
+                <p>Juan Pedro Basante</p>
+                <img src="img/estrellas.png">
+                <p class="precio">$200</p>
+                <button>
+                    <a href="#">Agregar Al Carrito</a>
+                </button>
+            </div>
+        </div> <!--.card-->
+    </div>
     <script src="./index.js"></script>
 </body>
 
