agregando js y funciones

--- a/js/CartShop/index.html
+++ b/js/CartShop/index.html
@@ -26,8 +26,11 @@
             <th></th>
           </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+          <!-- * Aqui Se genera el contenido -->
+        </tbody>
       </table>
+      <a href="#" class="vaciarCart">Vaciar Carrito</a>
     </section>
   </header>
 
@@ -37,7 +40,7 @@
     <button>Productos</button>
   </section>
 
-  <div class="container">
+  <div id="lista-cursos" class="container">
     <div class="card">
       <img src="img/curso1.jpg">
       <div class="info-card">
@@ -46,43 +49,43 @@
         <img src="img/estrellas.png">
         <p class="precio">$200</p>
         <button>
-          <a href="#">Agregar Al Carrito</a>
+          <a href="#" class="add_cart" data-id="1">Agregar Al Carrito</a>
         </button>
       </div>
     </div> <!--.card-->
     <div class="card">
-      <img src="img/curso1.jpg">
+      <img src="img/curso2.jpg">
       <div class="info-card">
-        <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
-        <p>Juan Pedro Basante</p>
+        <h4>Curso Recetas Familiares</h4>
+        <p>Fuestes Andres B</p>
         <img src="img/estrellas.png">
-        <p class="precio">$200</p>
+        <p class="precio">$150</p>
         <button>
-          <a href="#">Agregar Al Carrito</a>
+          <a href="#" class="add_cart" data-id="2">Agregar Al Carrito</a>
         </button>
       </div>
     </div> <!--.card-->
     <div class="card">
-      <img src="img/curso1.jpg">
+      <img src="img/curso3.jpg">
       <div class="info-card">
-        <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
-        <p>Juan Pedro Basante</p>
+        <h4>Guitarra para Principiantes</h4>
+        <p>Andrade Sebastian</p>
         <img src="img/estrellas.png">
-        <p class="precio">$200</p>
+        <p class="precio">$70</p>
         <button>
-          <a href="#">Agregar Al Carrito</a>
+          <a href="#" class="add_cart" data-id="3">Agregar Al Carrito</a>
         </button>
       </div>
     </div> <!--.card-->
     <div class="card">
-      <img src="img/curso1.jpg">
+      <img src="img/curso4.jpg">
       <div class="info-card">
-        <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
+        <h4>Jardineria Hogareña y Decoración</h4>
         <p>Juan Pedro Basante</p>
         <img src="img/estrellas.png">
-        <p class="precio">$200</p>
+        <p class="precio">$60</p>
         <button>
-          <a href="#">Agregar Al Carrito</a>
+          <a href="#" class="add_cart" data-id="4">Agregar Al Carrito</a>
         </button>
       </div>
     </div> <!--.card-->
