agregando estilos cart shop

--- a/js/CartShop/index.html
+++ b/js/CartShop/index.html
@@ -23,10 +23,10 @@
             <th>Nombre</th>
             <th>Precio</th>
             <th>Cantidad</th>
-            <th></th>
+            <th> - </th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="cartStyle">
           <!-- * Aqui Se genera el contenido -->
         </tbody>
       </table>
@@ -44,7 +44,7 @@
     <div class="card">
       <img src="img/curso1.jpg">
       <div class="info-card">
-        <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
+        <h4>HTML5, CSS3, JavaScript </h4>
         <p>Juan Pedro Basante</p>
         <img src="img/estrellas.png">
         <p class="precio">$200</p>
@@ -80,7 +80,7 @@
     <div class="card">
       <img src="img/curso4.jpg">
       <div class="info-card">
-        <h4>Jardineria Hogareña y Decoración</h4>
+        <h4>Jardineria Hogareña</h4>
         <p>Juan Pedro Basante</p>
         <img src="img/estrellas.png">
         <p class="precio">$60</p>
