--- a/js/CartShop/index.html
+++ b/js/CartShop/index.html
@@ -14,24 +14,25 @@
   <header>
     <figure><i class="uil uil-android"></i></figure>
     <h2>Cart Shop </h2>
-    <figure><i class="uil uil-shopping-cart"></i></figure>
-    <section id="cartshopp">
-      <table id="lista-carrito">
-        <thead>
-          <tr>
-            <th>Imagen</th>
-            <th>Nombre</th>
-            <th>Precio</th>
-            <th>Cantidad</th>
-            <th> - </th>
-          </tr>
-        </thead>
-        <tbody class="cartStyle">
-          <!-- * Aqui Se genera el contenido -->
-        </tbody>
-      </table>
-      <a href="#" class="vaciarCart">Vaciar Carrito</a>
-    </section>
+    <figure><i class="uil uil-shopping-cart"></i>
+      <section id="cartshopp" class="showCart">
+        <table id="lista-carrito">
+          <thead>
+            <tr>
+              <th>Imagen</th>
+              <th>Nombre</th>
+              <th>Precio</th>
+              <th>Cantidad</th>
+              <th> - </th>
+            </tr>
+          </thead>
+          <tbody class="cartStyle">
+            <!-- * Aqui Se genera el contenido -->
+          </tbody>
+        </table>
+        <a href="#" class="vaciarCart">Vaciar Carrito</a>
+      </section>
+    </figure>
   </header>
 
   <section id="hero">
