--- a/js/Login/index.html
+++ b/js/Login/index.html
@@ -8,7 +8,25 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+
+    <main>
+        <section id="login">
+            <form>
+                <div>
+                    <label>UserName:</label>
+                    <input placeholder="example@example.com" ty>
+                </div>
+                <div>
+                    <label>Password:</label>
+                    <input type="password" placeholder="*********">
+                </div>
+                
+                <div>
+                    <input type="submit" value=" Login Page">
+                </div>
+            </form>
+        </section>
+    </main>
 
     <script src="./index.js"></script>
 </body>
