centrando el div

--- a/js/Login/index.html
+++ b/js/Login/index.html
@@ -21,7 +21,7 @@
                 <h1>Sign Up</h1>
                 <p>Enter your credentials</p>
             </div>
-            <form>
+            <form class="formLogin">
                 <input type="text" placeholder="user email">
                 <input type="password" spellcheck="false" 
                     id="password" placeholder="password"
