--- a/js/Login/index.html
+++ b/js/Login/index.html
@@ -33,6 +33,9 @@
                     </div>
                     <div id="strength"></div>
                 </div>
+                <button id="loginBtn" type="submit">
+                    JOIN NOW
+                </button>
             </form>
         </section>
     </main>
