--- a/JavaScript/Vanilla-JS/index.html
+++ b/JavaScript/Vanilla-JS/index.html
@@ -14,6 +14,7 @@
     border: 0;
     padding: 4px 8px;
     font-size: 18px;
+    border-radius: 10px;
     cursor: pointer;
   }
 
@@ -23,7 +24,7 @@
 </style>
 
 <body>
-  <button>Me Gusta</button>
+  <button data-id="123">Me Gusta</button>
 </body>
 
 </html>
