--- a/JavaScript/Vanilla-JS/index.html
+++ b/JavaScript/Vanilla-JS/index.html
@@ -25,6 +25,8 @@
 
 <body>
   <button data-id="123">Me Gusta</button>
+  <button data-id="123">Me Gusta</button>
+  <button data-id="123">Me Gusta</button>
 </body>
 
 <script src="./index.js"></script>
