--- a/React/React_01/index.html
+++ b/React/React_01/index.html
@@ -7,6 +7,24 @@
   <title>Document</title>
 </head>
 
+<style>
+  button {
+    background: #09f;
+    color: #fff;
+    border: 0;
+    padding: 4px 8px;
+    font-size: 18px;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+
+  body {
+    background: #222;
+    color: #fff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+</style>
+
 <body>
   <div id="app"></div>
 </body>
