--- a/JavaScript/Funciones/index.html
+++ b/JavaScript/Funciones/index.html
@@ -10,6 +10,9 @@
     
     <!-- <script src="./Object_destruturing.js"></script> -->
     <!-- <script src="./asyn.js"></script> -->
-    <script src="./map.js"></script>
+    <!-- <script src="./map.js"></script> -->
+    <script src="./funciones.js" >
+        
+    </script>
 </body>
 </html>
