continuar practicando las clases en js

--- a/JavaScript/Funciones/index.html
+++ b/JavaScript/Funciones/index.html
@@ -7,14 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-
-    <div id="render"></div>
-    <br>
-    <div id="render2"></div>
-    <!-- <script src="./Object_destruturing.js"></script> -->
-    <!-- <script src="./asyn.js"></script> -->
-    <!-- <script src="./map.js"></script> -->
-    <!-- <script src="./funciones.js" > </script> -->
-    <script src="./Objects.js"></script>
+    <script src="./ejemplos.js"></script>
 </body>
 </html>
