--- a/JavaScript/Arreglos/index.html
+++ b/JavaScript/Arreglos/index.html
@@ -10,6 +10,7 @@
 <body>
 
 </body>
-<script type="module" src="./Arreglo01.js"></script>
+<!-- <script type="module" src="./Arreglo01.js"></script> -->
+<script type="module" src="./Arreglo02.js"></script>
 
 </html>
