continuar con clase de arreglos

--- a/JavaScript/Arreglos/index.html
+++ b/JavaScript/Arreglos/index.html
@@ -11,6 +11,7 @@
 
 </body>
 <!-- <script type="module" src="./Arreglo01.js"></script> -->
-<script type="module" src="./Arreglo02.js"></script>
+<!-- <script type="module" src="./Arreglo02.js"></script> -->
+<script type="module" src="./Arreglo03.js"></script>
 
 </html>
