--- a/JavaScript/Objectos/index.html
+++ b/JavaScript/Objectos/index.html
@@ -12,6 +12,7 @@
 </body>
 <!-- <script type="module" src="./index.js"></script> -->
 <!-- <script type="module" src="./index02.js"></script> -->
-<script type="module" src="./index03.js"></script>
+<!-- <script type="module" src="./index03.js"></script> -->
+<script type="module" src="./index04.js"></script>
 
 </html>
