--- a/JavaScript/Objectos/index.html
+++ b/JavaScript/Objectos/index.html
@@ -13,6 +13,7 @@
 <!-- <script type="module" src="./index.js"></script> -->
 <!-- <script type="module" src="./index02.js"></script> -->
 <!-- <script type="module" src="./index03.js"></script> -->
-<script type="module" src="./index04.js"></script>
+<!-- <script type="module" src="./index04.js"></script> -->
+<script type="module" src="./index05.js"></script>
 
 </html>
