--- a/JavaScript/Objectos/index.html
+++ b/JavaScript/Objectos/index.html
@@ -14,6 +14,8 @@
 <!-- <script type="module" src="./index02.js"></script> -->
 <!-- <script type="module" src="./index03.js"></script> -->
 <!-- <script type="module" src="./index04.js"></script> -->
-<script type="module" src="./index05.js"></script>
+<!-- <script type="module" src="./index05.js"></script> -->
+<!-- <script type="module" src="./index06.js"></script> -->
+<script type="module" src="./index07.js"></script>
 
 </html>
