--- a/JavaScript/Objectos/index.html
+++ b/JavaScript/Objectos/index.html
@@ -16,6 +16,8 @@
 <!-- <script type="module" src="./index04.js"></script> -->
 <!-- <script type="module" src="./index05.js"></script> -->
 <!-- <script type="module" src="./index06.js"></script> -->
-<script type="module" src="./index07.js"></script>
+<!-- <script type="module" src="./index07.js"></script> -->
+<!-- <script type="module" src="./index08.js"></script> -->
+<script type="module" src="./index09.js"></script>
 
 </html>
