--- a/JavaScript/Objectos/index.html
+++ b/JavaScript/Objectos/index.html
@@ -18,6 +18,7 @@
 <!-- <script type="module" src="./index06.js"></script> -->
 <!-- <script type="module" src="./index07.js"></script> -->
 <!-- <script type="module" src="./index08.js"></script> -->
-<script type="module" src="./index09.js"></script>
+<!-- <script type="module" src="./index09.js"></script> -->
+<script type="module" src="./index10.js"></script>
 
 </html>
