--- a/React/app-react-tremor/index.html
+++ b/React/app-react-tremor/index.html
@@ -7,8 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root" 
-      class="dark:bg-slate-800 dark:text-white min-h-[100vh]"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
