--- a/JavaScript/Proyectos/admin_citas/index.html
+++ b/JavaScript/Proyectos/admin_citas/index.html
@@ -17,7 +17,7 @@
         <p>Añade Pacientes y <span>Administralos</span></p>
       </article>
 
-      <form action="" id="formulario-citas">
+      <form id="nueva-cita">
         <label for="paciente">Nombre Paciente:</label>
         <input type="text" id="paciente" name="paciente" placeholder="Nombre Paciente">
 
