example proyecto dnd-kit

--- a/JavaScript/Funciones/index.html
+++ b/JavaScript/Funciones/index.html
@@ -6,6 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./index.js"></script>
+  <section id="Hola" class="ejemplo"></section>
+  <button id="button">Dame Click</button>
+  <!-- <script src="./index.js"></script> -->
+  <script src="index2.js"></script>
 </body>
 </html>
